# LGA-RCM-YOLO

./: LICENSE  README.md  README_zh.md  pyproject.toml  source_init.py
configs/datasets/: instrument-seg-new.yaml
configs/models/: yolo11-seg-LGA-c3k2RCM.yaml  yolo11-seg-LGA.yaml  yolo11-seg-c3k2RCM.yaml  yolo11-seg.yaml
lga_rcm_yolo/: tasks.py
lga_rcm_yolo/Attention/: LGA.py  __init__.py
lga_rcm_yolo/modules/: __init__.py  block.py
scripts/: eval_interface.py  test_fps.py  train.py  train_lga_only.py  train_rcm_only.py
tools/color_classifier/: auto_color_binary.py  labelme2yolo_with_colorflag.py  readme_annitator.md  train_color_cls.py  val_color_cls.py  yolo_interface_color_annotator.py.py  yolo_seg_color_infer.py.py
tools/process_monitoring/: liquid_level_calculator.py  segmentation_ui.py
tools/process_monitoring/video_preprocess/: extract_frames.py  plot_height_diff.py  plot_height_diff_corrected,py  plot_solid_timeline.py  readme.md  video_segmentation.py
